--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       {{ content }}
       <div id="footer" class="content_box span-24">
         <div class="content_wrapper">
-          <div style="float:left; margin-bottom:10px;">&copy; 2007-2010 <a href="http://railway.at">railway</a></div>
+          <div style="float:left; margin-bottom:10px;">&copy; 2007-2010 <a href="http://www.railway.at">railway</a></div>
           <div style="float:right; margin-bottom:10px;"><a href="/imprint">Imprint / Impressum</a></div>
         </div>
       </div>
