--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       </div>
       {{ content }}
       <div id="footer" class="content_box span-24">
-        <div class="content_wrapper">
+        <div class="content_wrapper" style="margin-top:10px;">
           <div style="float:left; margin-bottom:10px;">&copy; 2007-2010 <a href="http://www.railway.at">railway</a></div>
           <div style="float:right; margin-bottom:10px;"><a href="/imprint">Imprint / Impressum</a></div>
         </div>
