--- a/stylesheets/railway.css
+++ b/stylesheets/railway.css
@@ -213,6 +213,11 @@ blockquote {
   height: 240px;
 }
 
+/* about */
+#about p + p, #about h4 + p {
+  margin-top: 0.5em;
+}
+
 /* cv */
 #cv h3 {
   margin-top: 1em;
