--- a/stylesheets/railway.css
+++ b/stylesheets/railway.css
@@ -81,7 +81,7 @@ div.content h3 {
   margin: 1.5em 0 0.25em 0;
 }
 
-div.content .disclaimer {
+div.content .info_box {
   font-style: italic;
   margin: 20px;
 }
